argocd/kustomized-helm/grafana-oncall/example-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-oncall
  labels:
    app: grafana-oncall
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:...:certificate/...
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/tags: "Team=devops,Server=etc,Service=grafana-oncall,Security_level=moderate,Environment=dev"
    alb.ingress.kubernetes.io/healthcheck-path: /health/
    alb.ingress.kubernetes.io/security-groups: sg-...
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: grafana-oncall.example.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-oncall-engine-external
            port:
              number: 8080
